Test Babylon integration

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babylonjs/core": "^6.23.0",
     "@clerk/nextjs": "^4.25.3",
     "@prisma/client": "^5.1.1",
     "@t3-oss/env-nextjs": "^0.6.0",
