--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@babylonjs/core": "^6.23.0",
+    "@babylonjs/gui": "^6.23.0",
+    "@babylonjs/loaders": "^6.23.0",
     "@clerk/nextjs": "^4.25.3",
     "@prisma/client": "^5.1.1",
     "@t3-oss/env-nextjs": "^0.6.0",
@@ -25,12 +27,14 @@
     "dayjs": "^1.11.10",
     "next": "^13.4.19",
     "react": "18.2.0",
+    "react-babylonjs": "^3.1.20",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "superjson": "^1.13.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@babylonjs/inspector": "^6.23.0",
     "@types/eslint": "^8.44.2",
     "@types/node": "^18.16.0",
     "@types/react": "^18.2.20",
