cool refactor, start dnd

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babylonjs/gui": "^6.23.0",
     "@babylonjs/loaders": "^6.23.0",
     "@clerk/nextjs": "^4.25.3",
+    "@dnd-kit/core": "^6.0.8",
     "@formkit/auto-animate": "^0.8.0",
     "@prisma/client": "^5.1.1",
     "@t3-oss/env-nextjs": "^0.6.0",
