--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@babylonjs/core": "^6.23.0",
     "@babylonjs/gui": "^6.23.0",
+    "@babylonjs/havok": "^1.2.1",
     "@babylonjs/loaders": "^6.23.0",
     "@clerk/nextjs": "^4.25.3",
     "@dnd-kit/core": "^6.0.8",
